[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "misen"
version = "0.1.0"
description = "Reusable AI workflow blocks — define once, compose freely, plug in anywhere."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "syshin0116" }]
keywords = ["ai", "workflow", "pipeline", "block", "composable"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/misen"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
